Add Mac app packaging with py2app
- Add setup.py for py2app build configuration
- Add requirements.txt with dependencies
- Update app.py to auto-open browser on launch
- Update .gitignore for build artifacts
- Move unused files to DONTNEED folder
- Fix Python 3.13 compatibility (use modern pyparsing)

--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,11 @@ __pycache__/
 .DS_Store
 *.musicxml
 *.xml
-!abcplus.abc
-!test_new_commands.abc
+
+# Build artifacts
+build/
+dist/
+.venv/
+
+# Unused files
+DONTNEED/
